14.11.2010
        - renamed deicsonze2 files and classes with '2' suffixes
        - Applied patch by Orcan to convert populateAddSynth(). (Tim)
        - Changed all setMargin() calls to setContentsMargins(). (setMargin() is obsoleted!)
12.11.2010
        - Fixed arranger alignment issues - set layout margins to zero. (Tim)
          TODO: Track list items aligned to canvas tracks are still off by one lousy vertical pixel.
11.11.2010
        - WIP: Mixer and strips re-designed to be theme/font friendly - no more fixed STRIP_WIDTH. (Tim)
        - Fixed Slider, Knob and DoubleEntry classes. Knob anti-aliasing applied (where allowed).
        - Transport handle colour fixed - added setAutoFillBackground(true). 
10.11.2010
        - Ported transport window to Qt4. The handle color needs a fix (Orcan) 
09.11.2010
        - Fixed audio and midi strips and converted to Qt4. Looks OK now, but will be better... (Tim)
          TODO: Convert Slider, Knob, EffectRack, ComboBox classes etc. (After that the strips will be perfect.)
08.11.2010
	- Add missing link to libdl.so. Caused bulid failure on Fedora 14 (Orcan)
        - Fixed strip name label colours, also name label auto-font-sizing. (Tim) 
        - Updated some window flags (stay on top, delete on close...) (Tim)
07.11.2010
        - Mixer is fixed and converted to QT4. (Tim)
        - Conversion of TLLayout class to QT4. 
        - Conversion of TempoEdit class to QT4. Displays proper doubles now.
06.11.2010
        - Yipee! De retour aux les popup menus 'stay-open'. (Tim)
        - Fixed PopupMenu class. All routing popups done (midi trackinfo, midi strip, audio strip).
          TODO: Fix midi 'toggle all'. Use routes as QVariant action user data (someone started this already)...
        - Major cleanup of audio and midi strip comments, code. (A fresh start for your tired eyes, you guys...)
        - Test OK so far with all track types. 
04.11.2010